AC_PREREQ(2.52)
AC_INIT(libxbkstringsep, 1.0,
        [http://www.x-itec.net/libxbkstringsep++])
AM_CONFIG_HEADER(xbkstringsep++/config.h)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AM_MAINTAINER_MODE
AC_PROG_CXX
AC_ISC_POSIX
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h, AC_DEFINE(HAVE_UNISTD_H))
AM_PROG_LIBTOOL

MEINELIB_MAJOR_VERSION=1
MEINELIB_MINOR_VERSION=0
MEINELIB_MICRO_VERSION=0

MEINELIB_VERSION=$MEINELIB_MAJOR_VERSION.$MEINELIB_MINOR_VERSION.$MEINELIB_MICRO_VERSION

VERSION=$MEINELIB_VERSION
PACKAGE=libxbkstringsep++

AC_SUBST(MEINELIB_MAJOR_VERSION)
AC_SUBST(MEINELIB_MINOR_VERSION)
AC_SUBST(MEINELIB_MICRO_VERSION)
AC_SUBST(VERSION)
AC_SUBST(PACKAGE)
AC_OUTPUT(Makefile xbkstringsep++/Makefile demos/Makefile)
